Fix bg color and display along with usability on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,14 @@
   }
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -44,4 +52,13 @@ th {
 
 table {
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+p.tui-calendar-title-today {
+  height: max-content !important;
+}
+
+.css-ix59yg .tui-datepicker-input * {
+  color: white !important;
+  background-color: #1e293b !important;
 }
